salesforce/force-app/main/default/objects/AttributionTrace__c/AttributionTrace__c.object-meta.xml
<CustomObject>
    <description>Root cause + evidence per finding. Multiple traces per finding allowed (ranked by confidence).</description>
    <label>Attribution Trace</label>
    <nameField>
        <displayFormat>AT-{00000}</displayFormat>
        <label>Attribution Trace ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attribution Traces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>