salesforce/force-app/main/default/objects/AttributionTrace__c/fields/AiExplanation__c.field-meta.xml
<CustomField>
    <fullName>AiExplanation__c</fullName>
    <label>AI Explanation</label>
    <type>LongTextArea</type>
    <length>8000</length>
</CustomField>