salesforce/force-app/main/default/objects/AttributionTrace__c/fields/AiModel__c.field-meta.xml
<CustomField>
    <fullName>AiModel__c</fullName>
    <label>AI Model</label>
    <type>Text</type>
    <length>60</length>
</CustomField>