salesforce/force-app/main/default/objects/AttributionTrace__c/fields/AiSuggestedFix__c.field-meta.xml
<CustomField>
    <fullName>AiSuggestedFix__c</fullName>
    <label>AI Suggested Fix</label>
    <type>LongTextArea</type>
    <length>8000</length>
</CustomField>