salesforce/force-app/main/default/objects/AttributionTrace__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>2</scale>
</CustomField>