salesforce/force-app/main/default/objects/AttributionTrace__c/fields/Evidence__c.field-meta.xml
<CustomField>
    <fullName>Evidence__c</fullName>
    <label>Evidence (JSON)</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>