salesforce/force-app/main/default/objects/AttributionTrace__c/fields/ForensicFinding__c.field-meta.xml
<CustomField>
    <fullName>ForensicFinding__c</fullName>
    <label>Forensic Finding</label>
    <type>Lookup</type>
    <referenceTo>ForensicFinding__c</referenceTo>
    <relationshipName>AttributionTraces</relationshipName>
    <relationshipLabel>Attribution Traces</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>