salesforce/force-app/main/default/objects/AttributionTrace__c/fields/ReasonCode__c.field-meta.xml
<CustomField>
    <fullName>ReasonCode__c</fullName>
    <label>Reason Code</label>
    <type>Text</type>
    <length>80</length>
</CustomField>