salesforce/force-app/main/default/objects/AttributionTrace__c/fields/RootCauseClass__c.field-meta.xml
<CustomField>
    <fullName>RootCauseClass__c</fullName>
    <label>Root Cause Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>