salesforce/force-app/main/default/objects/AttributionTrace__c/fields/RootConfigId__c.field-meta.xml
<CustomField>
    <fullName>RootConfigId__c</fullName>
    <label>Root Config Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>