salesforce/force-app/main/default/objects/AttributionTrace__c/fields/RootConfigName__c.field-meta.xml
<CustomField>
    <fullName>RootConfigName__c</fullName>
    <label>Root Config Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>