salesforce/force-app/main/default/objects/AttributionTrace__c/fields/RootConfigType__c.field-meta.xml
<CustomField>
    <fullName>RootConfigType__c</fullName>
    <label>Root Config Type</label>
    <type>Text</type>
    <length>80</length>
</CustomField>